--- a/FlexTimeTable/Flex.Master
+++ b/FlexTimeTable/Flex.Master
@@ -1,7 +1,6 @@
 ﻿<%@ Master Language="VB" AutoEventWireup="false" CodeBehind="Flex.master.vb" Inherits="FlexTimeTable.Flex" %>
 
-<%@ Register assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" tagprefix="asp" %>
-
+<%@ Register Assembly="AjaxControlToolkit" Namespace="AjaxControlToolkit" TagPrefix="asp" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head id="Head1" runat="server">
@@ -43,9 +42,20 @@
                 <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
             </div>
         </div>
-       
         <div class="main">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server" />
+            <asp:ScriptManager ID="ScriptManager1" runat="server">
+            </asp:ScriptManager>
+            <asp:UpdateProgress ID="UpdateProgress1" runat="server" 
+                AssociatedUpdatePanelID="UpdatePanel1">
+                <ProgressTemplate>
+                  <asp:Image ID="Image1" runat="server" ImageUrl="~/images/ajax-loader.gif" />
+                </ProgressTemplate>
+            </asp:UpdateProgress>
+            <asp:UpdatePanel ID="UpdatePanel1" runat="server">
+                <ContentTemplate>
+                    <asp:ContentPlaceHolder ID="MainContent" runat="server" />
+                </ContentTemplate>
+            </asp:UpdatePanel>
         </div>
         <div class="clear">
         </div>
